k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jomo-backend-service
  labels:
    app: jomo-backend
spec:
  selector:
    app: jomo-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
