k8s/staging-monitoring-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: staging
spec:
  type: ExternalName
  externalName: grafana.monitoring-staging.svc.cluster.local
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: staging
spec:
  type: ExternalName
  externalName: prometheus.monitoring-staging.svc.cluster.local
  ports:
    - port: 9090
      targetPort: 9090
